# slambook2

ch3/useEigen/: eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/: useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: orb_cv.cpp  pose_estimation_2d2d.cpp
